# kindle-collection-manager

./: .env.example  .gitignore  README.md  pyproject.toml
data/: collection_candidates.jsonl  collection_candidates_review.csv  collection_candidates_summary.csv
docs/: README.md  adr-001-kindle-integration-strategy.md  adr-template.md  api-design-notes-template.md  architecture-kindle-service.md  architecture-template.md  collection-candidate-command-spec.md  collection-normalization-spec.md  create-collections-spec.md  database-schema.md  implementation-plan-kindle-service.md  implementation-plan-template.md  import-flow.md  requirements-kindle-service.md  requirements-template.md  testing-plan-template.md
src/kindle_service/: __init__.py  cli.py  collection_candidates.py  config.py  create_collections.py  models.py  planner.py  storage.py
src/kindle_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/kindle_service/kindle/: __init__.py  adapter.py  playwright_sync.py
tests/: test_collection_candidates.py  test_create_collections.py  test_planner.py  test_storage.py
