[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kindle-service"
version = "0.1.0"
description = "Local CLI for planning and syncing Kindle collections"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.52.0",
]

[project.scripts]
kindle-service = "kindle_service.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
